--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,13 +9,10 @@ repository = "https://github.com/ickshonpe/bevy_simple_stat_bars"
 description = "draw stat bars that follow sprites"
 
 [dependencies.bevy]
-version = "0.8"
+version = "0.14"
 default-features = false
-features = ["render"]
-
-[dependencies.copyless]
-version = "0.1.5"
+features = ["bevy_render"]
 
 [dev-dependencies.bevy]
-version = "0.8"
+version = "0.14"
 default-features = true
